@@ -25,7 +25,6 @@ make
 
 %install
 rm -fr %{buildroot}
-mkdir -p %{buildroot}/usr/local/bglibs/{include,lib}
 make install_prefix=%{buildroot} install
 
 cp -a doc %{buildroot}/usr/local/bglibs
