@@ -7,6 +7,8 @@ Changes in version 1.022
 - Fixed the instshow library to use and dispaly the install prefix just
   like the other instlib programs.
 
+- The installers now automatically create missing directories.
+
 - Added path_mkdirs function.
 
 Development of this version has been sponsored by FutureQuest, Inc.
